--- a/servidor/variables.env
+++ b/servidor/variables.env
@@ -1,1 +1,1 @@
-DB_MONGO=mongodb+srv://attiliogiglio:root@cluster0.865ge.mongodb.net/merntasks
+DB_MONGO=mongodb+srv://attiliogiglio:attiliogiglio@cluster0.865ge.mongodb.net/merntasks
